# security-check-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/commands/: security-check.md
src/: config.py  server.py
src/resources/: README.md
src/tools/: README.md  security_tools.py
src/utils/: README.md  helpers.py
tests/: test_security_tools.py
